--- a/media.css
+++ b/media.css
@@ -33,6 +33,7 @@
     padding: 50px 0;
   }
 
+
   .home {
     flex-direction: column;
   }
@@ -85,17 +86,15 @@
     margin-bottom: 30px;
   }
 
-  .services__item {
-    padding: 15px;
-  }
-
-  .services__item h3 {
-    margin-bottom: 5px;
-  }
-
   .portfolio__grid {
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+  }
+  #about, #portfolio{
+    height: 180vh;
+  }
+  #hobbies{
+    height: 150vh; 
   }
 }
 
